--- a/frontend/petcare_app/pubspec.yaml
+++ b/frontend/petcare_app/pubspec.yaml
@@ -48,6 +48,8 @@ dev_dependencies:
 
   http: ^1.2.1
 
+  shared_preferences: ^2.0.6
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
