--- a/frontend/petcare_app/pubspec.yaml
+++ b/frontend/petcare_app/pubspec.yaml
@@ -92,3 +92,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/default_image.jpg
