--- a/frontend/petcare_app/pubspec.yaml
+++ b/frontend/petcare_app/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
-  image_picker: ^0.8.4+4 # 追加
+  image_picker: ^0.8.4+4
+  permission_handler: ^10.2.0
+  shared_preferences: ^2.0.8
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -47,10 +50,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
-  http: ^1.2.1
-
-  shared_preferences: ^2.0.6
 
   logging: ^1.0.2
 
